- fixes groups scrollbar (accidentally) showing up outside the sidebar

--- a/trunk/styles/snippely.css
+++ b/trunk/styles/snippely.css
@@ -84,8 +84,8 @@ body {
 #groups {
 	top: 0px;
 	left: 0px;
+	right: 0px;
 	bottom: 23px;
-	width: 100%;
 	position: absolute;
 }
 
@@ -95,12 +95,12 @@ body {
 }
 
 #groups h3 {
-	padding: 0 12px;
-	margin: 8px 0 6px;
+	padding: 0px 12px;
+	margin: 8px 0px 6px;
 	font-size: 11px;
 	font-weight: bold;
 	text-transform: uppercase;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+	text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.5);
 }
 
 #groups li {
@@ -113,7 +113,7 @@ body {
 #groups li.selected {
 	color: #fff;
 	font-weight: bold;
-	text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
+	text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.5);
 }
 
 #groups li.editing::selection {
@@ -252,7 +252,7 @@ body {
 	font-size: 20px;
 	font-family: Helvetica;
 	margin-bottom: 10px;
-	text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+	text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.1);
 	outline: none;
 }
 
@@ -283,7 +283,7 @@ div.snip {
 	position: relative;
 	border: 1px solid #bbb;
 	-webkit-border-radius: 6px;
-	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
 	background: url(../images/grad.png) bottom left repeat-x;
 }
 
